--- a/Experiments/PaperCovid_19Grating.ipynb
+++ b/Experiments/PaperCovid_19Grating.ipynb
@@ -6,7 +6,8 @@
       "name": "PaperCovid-19Grating_UglyCurve.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "machine_shape": "hm"
+      "machine_shape": "hm",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
