--- a/Experiments/PaperCovid_19Grating.ipynb
+++ b/Experiments/PaperCovid_19Grating.ipynb
@@ -17,6 +17,16 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/ugurtegin/Nonlinear_MMF_Network/blob/main/Experiments/PaperCovid_19Grating.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "plRoSF3YWrl5",
